# tokendiet

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
benchmarks/: RESULTS.md  fidelity_check.py  format_compare.py  ground_truth.py  make_corpus.py  office_probe.py  run.py
docs/: ROADMAP.md  format-support.md  getting-started.md
src/tokendiet/: __init__.py  cli.py  convert.py  html.py  report.py  tokens.py
tests/: conftest.py  test_cli.py  test_convert.py  test_html.py  test_image.py  test_report.py  test_tokens.py
