[project]
name = "tokendiet"
version = "0.2.0"
description = "Convert documents to lean Markdown so Claude reads the cheap version — with a measured token-$ savings report."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Badru Siddique" }]
keywords = [
    "pdf to markdown",
    "markdown",
    "claude",
    "claude skill",
    "llm tokens",
    "token optimization",
    "context window",
    "anthropic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
]
dependencies = [
    "markdownify>=1.2.2",
    "pymupdf4llm>=0.0.17",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
# Ground-truth token counting via Anthropic's count_tokens API (optional).
anthropic = ["anthropic>=0.40"]

[project.scripts]
tokendiet = "tokendiet.cli:main"

[project.urls]
Homepage = "https://github.com/badrusiddique/tokendiet"
Repository = "https://github.com/badrusiddique/tokendiet"
Issues = "https://github.com/badrusiddique/tokendiet/issues"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tokendiet"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore:builtin type Swig.*:DeprecationWarning",
]
